practica-casa-24-junio

--- a/src/index.html
+++ b/src/index.html
@@ -33,6 +33,28 @@
           <span>32</span>
         </div>
 
+        <div id="include-options" class="include-options-container">
+          <div class="input-field">
+            <label for="uppercase" class="include-options-label">Include Uppercase</label>
+            <input type="checkbox" id="uppercase" class="include-options-input" />
+          </div>
+
+          <div class="input-field">
+            <label for="lowercase" class="include-options-label">Include Lowercase</label>
+            <input type="checkbox" id="lowercase" class="include-options-input" />
+          </div>
+
+          <div class="input-field">
+            <label for="numbers" class="include-options-label">Include Numbers</label>
+            <input type="checkbox" id="numbers" class="include-options-input" />
+          </div>
+
+          <div class="input-field">
+            <label for="symbols" class="include-options-label">Include Symbols</label>
+            <input type="checkbox" id="symbols" class="include-options-input" />
+          </div>
+        </div>
+
         <button id="generate-password-button" class="generate-password-button">Generate Password</button>
       </div>
     </main>
