--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
       rel="stylesheet"
     />
 
-    <title>Password generator</title>
+    <title>Advanced password generator</title>
   </head>
 
   <body>
@@ -55,7 +55,7 @@
           </div>
         </div>
 
-        <button id="generate-password-button" class="generate-password-button">Generate Password</button>
+        <button disabled id="generate-password-button" class="generate-password-button">Generate Password</button>
       </div>
     </main>
     <script type="module" src="./js/index.js"></script>
